# calc

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  calchandler.cpp  calchandler.h  calculationhistory.cpp  calculationhistory.h  calculatorconfig.h  displayformatter.cpp  displayformatter.h  historydialog.cpp  historydialog.h  historypanel.cpp  historypanel.h  inputvalidator.cpp  inputvalidator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memorydropdowndialog.cpp  memorydropdowndialog.h  memorymanager.cpp  memorymanager.h  resources.qrc  thememanager.cpp  thememanager.h  uianimations.cpp  uianimations.h
tests/: CMakeLists.txt  test_calchandler.cpp  test_calculationhistory.cpp  test_displayformatter.cpp  test_inputvalidator.cpp  test_mainwindow.cpp  test_memorymanager.cpp  test_thememanager.cpp  test_uianimations.cpp
